deployment/k8s/base/env-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: all-deployments
  annotations:
    note: "patching all deployments"
spec:
  template:
    spec:
      containers:
      - name: ".*"
