deployment/k8s/base/api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: retailstore
spec:
  ports:
  - port: 8765
    targetPort: 8765
  selector:
    app: api-gateway
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: retailstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - env:
        - name: CONFIG_SERVER_USR
          valueFrom:
            secretKeyRef:
              key: CONFIG_SERVER_USR
              name: config-server-credentials
        - name: CONFIG_SERVER_PWD
          valueFrom:
            secretKeyRef:
              key: CONFIG_SERVER_PWD
              name: config-server-credentials
        - name: SPRING_CONFIG_IMPORT
          value: optional:configserver:http://$(CONFIG_SERVER_USR):$(CONFIG_SERVER_PWD)@config-server:8888/
        - name: EUREKA_CLIENT_SERVICEURL_DEFAULTZONE
          value: http://service-registry:8761/eureka/
        - name: SERVER_FORWARD_HEADERS_STRATEGY
          value: framework
        - name: CONFIG_SERVER
          value: http://$(CONFIG_SERVER_USR):$(CONFIG_SERVER_PWD)@$(CONFIG_SERVER_HOST):$(CONFIG_SERVER_PORT)
        - name: SPRING_DATA_REDIS_HOST
          value: redis
        - name: JAVA_TOOL_OPTIONS
          value: -XX:MaxDirectMemorySize=256m -Xmx400m
        - name: OTEL_SERVICE_NAME
          value: api-gateway
        - name: OTEL_RESOURCE_ATTRIBUTES
          value: service.name=api-gateway,service.version=0.0.1-SNAPSHOT
        image: dockertmt/mmv2-api-gateway:0.0.1-SNAPSHOT
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8765
          initialDelaySeconds: 5
          periodSeconds: 10
        name: api-gateway
        ports:
        - containerPort: 8765
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8765
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 1000m
            memory: 1400Mi
          requests:
            cpu: 200m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /actuator/health/liveness
            port: 8765
          periodSeconds: 10
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: api-gateway
      volumes:
      - emptyDir: {}
        name: tmp-volume
