deployment/k8s/base/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: retailstore
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: management
    port: 9000
    targetPort: 9000
  - name: http-80
    port: 80
    targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: retailstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - args:
        - start
        image: quay.io/keycloak/keycloak:26.7.5
        name: keycloak
        ports:
        - containerPort: 8080
        - containerPort: 9000
        readinessProbe:
          httpGet:
            path: /health/ready
            port: 9000
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          limits:
            cpu: 1000m
            memory: 1400Mi
          requests:
            cpu: 200m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        volumeMounts:
        - mountPath: /tmp
          name: tmp-volume
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      serviceAccountName: keycloak
      volumes:
      - emptyDir: {}
        name: tmp-volume
