deployment/k8s/base/internal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required
    nginx.ingress.kubernetes.io/auth-secret: jobrunr-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/enable-access-log: 'true'
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
    nginx.ingress.kubernetes.io/whitelist-source-range: 10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
  name: internal-ingress
  namespace: retailstore
spec:
  rules:
  - host: jobrunr.local
    http:
      paths:
      - backend:
          service:
            name: order-service
            port:
              number: 28282
        path: /
        pathType: Prefix
